--- a/index.html
+++ b/index.html
@@ -13,16 +13,21 @@
             <div ng-view></div>
         </div>
 
-        <script src="public/lib/angular/angular.js"></script>
-        <script src="public/lib/angular-route/angular-route.js"></script>
 
         <script src="public/lib/jquery/dist/jquery.min.js"></script>
         <script src="public/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+
+
+        <script src="public/lib/angular/angular.js"></script>
+        <script src="public/lib/angular-route/angular-route.js"></script>
+        <script src="public/lib/angular-file-upload/dist/angular-file-upload.min.js"></script>
+
 
         <script src="app/app.js"></script>
         <script src="app/app.config.js"></script>
 
         <script src="app/shared/services/user.service.js"></script>
+        <script src="app/shared/components/ngThumb.directive.js"></script>
 
         <script src="app/shared/navbar/navbar.module.js"></script>
         <script src="app/shared/navbar/navbar.component.js"></script>
