--- a/index.html
+++ b/index.html
@@ -41,5 +41,8 @@
         <script src="app/users/users.component.js"></script>
         <script src="app/users/user.component.js"></script>
 
+        <script src="app/users/login.component.js"></script>
+
+
     </body>
 </html>
