--- a/app/shared/navbar/navbar.html
+++ b/app/shared/navbar/navbar.html
@@ -12,9 +12,11 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li ng-class="$ctrl.isActive('/')"><a href="#/">Home</a></li>
-                <li ng-class="$ctrl.isActive('/about')"><a href="#about">About</a></li>
-                <li ng-class="$ctrl.isActive('/contact')"><a href="#contact">Contact</a></li>
-                <li ng-class="$ctrl.isActive('/users')"><a href="#users">Users</a></li>
+                <li ng-class="$ctrl.isActive('/about')"><a href="#/about">About</a></li>
+                <li ng-class="$ctrl.isActive('/contact')"><a href="#/contact">Contact</a></li>
+                <li ng-class="$ctrl.isActive('/users')"><a href="#/users">Users</a></li>
+                <li ng-class="$ctrl.isActive('/login')"><a href="#/login">Login</a></li>
+                <li ng-class="$ctrl.isActive('/logout')"><a href="#/logout">Logout</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
