--- a/app/pages/about.html
+++ b/app/pages/about.html
@@ -1,1 +1,6 @@
-<h1>About</h1>
+<div class="panel panel-default">
+    <div class="panel-heading">About</div>
+    <div class="panel-body">
+
+    </div>
+</div>
