--- a/app/pages/contact.html
+++ b/app/pages/contact.html
@@ -1,3 +1,8 @@
-<h1>Contact</h1>
+<div class="panel panel-default">
+    <div class="panel-heading">Contact</div>
+    <div class="panel-body">
+
+    </div>
+</div>
 
 
