--- a/app/users/user.html
+++ b/app/users/user.html
@@ -1,4 +1,5 @@
 <div class="panel panel-default">
+    <div class="panel-heading">User</div>
     <div class="panel-body">
         <div nv-file-drop="" uploader="$ctrl.uploader">
             <div class="row">
@@ -44,7 +45,6 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-
                     <form>
                         <div class="form-group">
                             <label for="userName">Name</label>
