--- a/index.html
+++ b/index.html
@@ -3,17 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Title</title>
+        <title>it-fast-solution</title>
 
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" >
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
         <link rel="stylesheet" href="public/lib/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="public/lib/font-awesome/css/font-awesome.min.css">
 
         <link rel="stylesheet" href="public/lib/bootstrap-material-design/dist/css/bootstrap-material-design.min.css">
         <link rel="stylesheet" href="public/lib/bootstrap-material-design/dist/css/ripples.min.css">
-
 
         <link rel="stylesheet" href="public/css/style.css">
     </head>
@@ -25,7 +24,6 @@
 
         <script src="public/lib/jquery/dist/jquery.min.js"></script>
         <script src="public/lib/bootstrap/dist/js/bootstrap.min.js"></script>
-
         <script src="public/lib/bootstrap-material-design/dist/js/ripples.min.js"></script>
         <script src="public/lib/bootstrap-material-design/dist/js/material.min.js"></script>
 
@@ -58,11 +56,8 @@
         <script src="app/products/products.module.js"></script>
         <script src="app/products/products.component.js"></script>
 
-
         <script>
             $.material.init();
         </script>
-
-
     </body>
 </html>
